The performance update.
No more Timer checking continuously the state of the server and
refreshing the output log.
This was really hard. Almost everything has been recode to do this.
More speed and lower memory usage thanks to the use of delegates for
refreshing the output and AppendText method.

Other changes:
Better Server Properties GUI.
Server auto-starts when opened with a shortcut.
"More" button menu for auto-input commands, including Reload and
Weather.
More options in Settings.

--- a/CBLauncher/Properties.es.resx
+++ b/CBLauncher/Properties.es.resx
@@ -118,24 +118,6 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="TabPage3.Size" type="System.Drawing.Size, System.Drawing">
-    <value>650, 620</value>
-  </data>
-  <data name="TabPage3.Text" xml:space="preserve">
-    <value>Vista Principal</value>
-  </data>
-  <data name="TabPage2.Size" type="System.Drawing.Size, System.Drawing">
-    <value>650, 620</value>
-  </data>
-  <data name="TabPage2.Text" xml:space="preserve">
-    <value>Vista Texto</value>
-  </data>
-  <data name="TabControl1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>658, 646</value>
-  </data>
-  <data name="GroupBox5.Size" type="System.Drawing.Size, System.Drawing">
-    <value>621, 161</value>
-  </data>
   <data name="MaxPlayersLabel.Size" type="System.Drawing.Size, System.Drawing">
     <value>99, 13</value>
   </data>
@@ -143,7 +125,7 @@
     <value>Jugadores máximos</value>
   </data>
   <data name="ResourcePackTextBox.Size" type="System.Drawing.Size, System.Drawing">
-    <value>606, 20</value>
+    <value>592, 20</value>
   </data>
   <data name="WhiteListCheckBox.Size" type="System.Drawing.Size, System.Drawing">
     <value>83, 17</value>
@@ -152,7 +134,7 @@
     <value>Lista blanca</value>
   </data>
   <data name="DescriptionTextBox.Size" type="System.Drawing.Size, System.Drawing">
-    <value>606, 20</value>
+    <value>592, 20</value>
   </data>
   <data name="DescriptionLabel.Size" type="System.Drawing.Size, System.Drawing">
     <value>63, 13</value>
@@ -160,11 +142,20 @@
   <data name="DescriptionLabel.Text" xml:space="preserve">
     <value>Descripción</value>
   </data>
+  <data name="GroupBox5.Size" type="System.Drawing.Size, System.Drawing">
+    <value>607, 161</value>
+  </data>
   <data name="GroupBox6.Size" type="System.Drawing.Size, System.Drawing">
-    <value>621, 296</value>
+    <value>607, 337</value>
   </data>
   <data name="GroupBox6.Text" xml:space="preserve">
     <value>Avanzado</value>
+  </data>
+  <data name="RconPasswordLabel.Size" type="System.Drawing.Size, System.Drawing">
+    <value>90, 13</value>
+  </data>
+  <data name="RconPasswordLabel.Text" xml:space="preserve">
+    <value>Contraseña Rcon</value>
   </data>
   <data name="Label4.Size" type="System.Drawing.Size, System.Drawing">
     <value>96, 13</value>
@@ -221,7 +212,7 @@
     <value>4 - Ops pueden usar /stop.</value>
   </data>
   <data name="OpPermLevelComboBox.Size" type="System.Drawing.Size, System.Drawing">
-    <value>606, 21</value>
+    <value>592, 21</value>
   </data>
   <data name="OpPermLevelLabel.Size" type="System.Drawing.Size, System.Drawing">
     <value>186, 13</value>
@@ -230,7 +221,7 @@
     <value>Nivel de permisos para los operadores</value>
   </data>
   <data name="GroupBox7.Size" type="System.Drawing.Size, System.Drawing">
-    <value>621, 374</value>
+    <value>607, 374</value>
   </data>
   <data name="GroupBox7.Text" xml:space="preserve">
     <value>Opciones de mundo</value>
@@ -272,7 +263,7 @@
     <value>Altura máxima de construcción</value>
   </data>
   <data name="LevelSeedTextBox.Size" type="System.Drawing.Size, System.Drawing">
-    <value>606, 20</value>
+    <value>592, 20</value>
   </data>
   <data name="SeedLabel.Size" type="System.Drawing.Size, System.Drawing">
     <value>40, 13</value>
@@ -287,7 +278,7 @@
     <value>Tipo de mundo</value>
   </data>
   <data name="LevelNameTextBox.Size" type="System.Drawing.Size, System.Drawing">
-    <value>606, 20</value>
+    <value>592, 20</value>
   </data>
   <data name="LevelNameLabel.Size" type="System.Drawing.Size, System.Drawing">
     <value>96, 13</value>
@@ -302,7 +293,7 @@
     <value>Permitir Inframundo</value>
   </data>
   <data name="GeneratorSettingsTextBox.Size" type="System.Drawing.Size, System.Drawing">
-    <value>606, 20</value>
+    <value>592, 20</value>
   </data>
   <data name="GeneratorSettingsLabel.Size" type="System.Drawing.Size, System.Drawing">
     <value>140, 13</value>
@@ -311,7 +302,7 @@
     <value>Configuración del generador</value>
   </data>
   <data name="GroupBox8.Size" type="System.Drawing.Size, System.Drawing">
-    <value>621, 256</value>
+    <value>607, 256</value>
   </data>
   <data name="GroupBox8.Text" xml:space="preserve">
     <value>Reglas de juego</value>
@@ -376,13 +367,10 @@
   <data name="AllowFlightCheckBox.Text" xml:space="preserve">
     <value>Permitir vuelo</value>
   </data>
-  <data name="TextBox5.Size" type="System.Drawing.Size, System.Drawing">
-    <value>644, 614</value>
-  </data>
-  <data name="ToolStrip1.Size" type="System.Drawing.Size, System.Drawing">
+  <data name="MenuBar.Size" type="System.Drawing.Size, System.Drawing">
     <value>658, 25</value>
   </data>
-  <data name="ToolStripButton1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="SaveToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
         YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAIDSURBVDhPpZLrS5NhGMb3j4SWh0oRQVExD4gonkDpg4hG
@@ -397,13 +385,7 @@
         TgDQASA1MVpwzwAAAABJRU5ErkJggg==
 </value>
   </data>
-  <data name="ToolStripButton1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>95, 22</value>
-  </data>
-  <data name="ToolStripButton1.Text" xml:space="preserve">
-    <value>Guardar y cerrar</value>
-  </data>
-  <data name="ToolStripButton2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="UndoToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
         YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAIDSURBVDhPpZLrS5NhGMb3j4SWh0oRQVExD4gonkDpg4hG
@@ -418,13 +400,7 @@
         TgDQASA1MVpwzwAAAABJRU5ErkJggg==
 </value>
   </data>
-  <data name="ToolStripButton2.Size" type="System.Drawing.Size, System.Drawing">
-    <value>59, 22</value>
-  </data>
-  <data name="ToolStripButton2.Text" xml:space="preserve">
-    <value>Deshacer</value>
-  </data>
-  <data name="ToolStripButton3.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="Regen.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
         YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAIDSURBVDhPpZLrS5NhGMb3j4SWh0oRQVExD4gonkDpg4hG
@@ -439,13 +415,7 @@
         TgDQASA1MVpwzwAAAABJRU5ErkJggg==
 </value>
   </data>
-  <data name="ToolStripButton3.Size" type="System.Drawing.Size, System.Drawing">
-    <value>190, 22</value>
-  </data>
-  <data name="ToolStripButton3.Text" xml:space="preserve">
-    <value>Regenerar archivo de propiedades</value>
-  </data>
-  <data name="Panel1.Size" type="System.Drawing.Size, System.Drawing">
+  <data name="Content.Size" type="System.Drawing.Size, System.Drawing">
     <value>658, 646</value>
   </data>
   <data name="$this.Size" type="System.Drawing.Size, System.Drawing">
