--- a/CBLauncher/Settings.es.resx
+++ b/CBLauncher/Settings.es.resx
@@ -117,34 +117,66 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="OK_Button.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
-    <value>NoControl</value>
+  <data name="Button2.Text" xml:space="preserve">
+    <value>Examinar</value>
   </data>
   <data name="GroupBox2.Text" xml:space="preserve">
     <value>Ruta predefinida para guardar un acceso directo</value>
   </data>
-  <data name="Button2.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
-    <value>NoControl</value>
+  <data name="Button1.Text" xml:space="preserve">
+    <value>Examinar</value>
   </data>
   <data name="GroupBox1.Text" xml:space="preserve">
     <value>Ruta predefinida para abrir un nuevo Jar</value>
   </data>
-  <data name="Button1.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
-    <value>NoControl</value>
-  </data>
-  <data name="GroupBox3.Text" xml:space="preserve">
-    <value>Ruta para Javaw y argumentos</value>
-  </data>
-  <data name="CheckBox1.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
-    <value>NoControl</value>
-  </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="CheckBox2.Size" type="System.Drawing.Size, System.Drawing">
+    <value>151, 17</value>
+  </data>
+  <data name="CheckBox2.Text" xml:space="preserve">
+    <value>Detectar automáticamente</value>
+  </data>
+  <data name="GroupBox4.Text" xml:space="preserve">
+    <value>Idioma (Próximamente)</value>
+  </data>
+  <data name="TabPage1.Text" xml:space="preserve">
+    <value>Principal</value>
+  </data>
+  <data name="Button3.Text" xml:space="preserve">
+    <value>Restablecer ajustes</value>
+  </data>
+  <data name="CheckBox3.Size" type="System.Drawing.Size, System.Drawing">
+    <value>162, 17</value>
+  </data>
+  <data name="CheckBox3.Text" xml:space="preserve">
+    <value>Preguntarme si estoy seguro.</value>
+  </data>
+  <data name="ForceStopRadio.Size" type="System.Drawing.Size, System.Drawing">
+    <value>143, 17</value>
+  </data>
+  <data name="ForceStopRadio.Text" xml:space="preserve">
+    <value>Forzar cierre del servidor.</value>
+  </data>
+  <data name="StopRadio.Size" type="System.Drawing.Size, System.Drawing">
+    <value>117, 17</value>
+  </data>
+  <data name="StopRadio.Text" xml:space="preserve">
+    <value>Detener el servidor.</value>
+  </data>
+  <data name="GroupBox5.Text" xml:space="preserve">
+    <value>¿Qué antes de salir?</value>
+  </data>
   <data name="CheckBox1.Size" type="System.Drawing.Size, System.Drawing">
     <value>142, 17</value>
   </data>
   <data name="CheckBox1.Text" xml:space="preserve">
     <value>Argumentos automáticos</value>
+  </data>
+  <data name="GroupBox3.Text" xml:space="preserve">
+    <value>Ruta para Javaw y argumentos</value>
+  </data>
+  <data name="TabPage3.Text" xml:space="preserve">
+    <value>Avanzado</value>
   </data>
   <data name="$this.Text" xml:space="preserve">
     <value>Ajustes</value>
