--- a/CBLauncher/Strings.resx
+++ b/CBLauncher/Strings.resx
@@ -179,4 +179,7 @@ Process Name and PID: </value>
   <data name="AreYouSure" xml:space="preserve">
     <value>Are you sure?</value>
   </data>
+  <data name="NotFound" xml:space="preserve">
+    <value>File not found.</value>
+  </data>
 </root>
